package model;

public interface Priceable {
    double calculatePrice();




}
